packages/edit-post/src/components/manage-blocks-modal/style.scss
.edit-post-manage-blocks-modal {
	@include break-small() {
		height: calc(100% - #{ $header-height } - #{ $header-height });
	}
}

.edit-post-manage-blocks-modal .components-modal__content {
	padding-bottom: 0;
	display: flex;
	flex-direction: column;
}

.edit-post-manage-blocks-modal .components-modal__header {
	flex-shrink: 0;
	margin-bottom: 0;
}

.edit-post-manage-blocks-modal__content {
	display: flex;
	flex-direction: column;
	height: 100%;
}

.edit-post-manage-blocks-modal__no-results {
	font-style: italic;
	padding: 24px 0;
	text-align: center;
}

.edit-post-manage-blocks-modal__search {
	margin: $grid-size-large 0;

	.components-base-control__field {
		margin-bottom: 0;
	}

	.components-base-control__label {
		margin-top: -0.25 * $grid-size-large;
	}

	input[type="search"].components-text-control__input {
		padding: 0.75 * $grid-size-large;
		border-radius: $radius-round-rectangle;
	}
}

.edit-post-manage-blocks-modal__category {
	margin: 0 0 2rem 0;
}

.edit-post-manage-blocks-modal__category-header {
	position: sticky;
	top: -1px;
	display: flex;
	align-items: center;
	justify-content: space-between;
	background-color: $white;
}

.edit-post-manage-blocks-modal__category-title {
	font-size: 0.9rem;
	font-weight: 600;
}

.edit-post-manage-blocks-modal__show-all {
	display: flex;
	align-items: center;
}

.edit-post-manage-blocks-modal__show-all-label {
	margin-right: $grid-size;
}

.edit-post-manage-blocks-modal__checklist {
	margin-top: 0;
}

.edit-post-manage-blocks-modal__checklist-item {
	margin-bottom: 0;
	border-top: 1px solid $light-gray-500;

	&:last-child {
		border-bottom: 1px solid $light-gray-500;
	}

	.components-base-control__field {
		align-items: center;
		display: flex;
		margin: 0;
	}

	.components-checkbox-control__label {
		display: flex;
		align-items: center;
		flex-grow: 1;
		padding: 0.6rem 10px 0.6rem 0;
	}

	.editor-block-icon {
		margin-right: 10px;
	}
}

.edit-post-manage-blocks-modal__results {
	height: 100%;
	overflow: auto;
	margin-left: -1 * $grid-size-large;
	margin-right: -1 * $grid-size-large;
	padding-left: $grid-size-large;
	padding-right: $grid-size-large;
	border-top: $border-width solid $light-gray-500;
}

